Use a proportional font for kbd roles, so that they don't look identical to ``literals``.

--- a/theme/css/theme.css
+++ b/theme/css/theme.css
@@ -85,6 +85,12 @@ pre, code,
     font-size: 1em;
 }
 
+.kbd.docutils.literal {
+    color: #333;
+    font-family: "Lato", "proxima-nova", "Helvetica Neue", Arial, sans-serif;
+    font-size: 1em;
+}
+
 pre {
     white-space: pre;
 }
