--- a/theme/css/theme.css
+++ b/theme/css/theme.css
@@ -2500,6 +2500,7 @@ input[type="text"], input[type="password"], input[type="email"], input[type="url
     font-size: 80%;
     font-family: "Lato", "proxima-nova", "Helvetica Neue", Arial, sans-serif;
     box-shadow: inset 0 1px 3px #ddd;
+    background-color:#FCFCFC; /* ensure background is light color even when a local theme wants it to be dark */
     border-radius: 0;
     -webkit-transition: border 0.3s linear;
     -moz-transition: border 0.3s linear;
@@ -4470,4 +4471,3 @@ img {
 }span[id*='MathJax-Span'] {
     color: #404040;
 }
-
