--- a/theme/css/theme_overrides.css
+++ b/theme/css/theme_overrides.css
@@ -61,3 +61,8 @@ input[type="color"] {
 .caption {
     line-height: 0px;
 }
+
+/* Fix navigation buttons not clearing */
+.rst-footer-buttons {
+    clear: both;
+}
