Proper seal navigation buttons
Differential Revision https://developer.blender.org/D1870

Author @TobiasH

--- a/theme/css/theme_overrides.css
+++ b/theme/css/theme_overrides.css
@@ -62,7 +62,7 @@ input[type="color"] {
     line-height: 0px;
 }
 
-/* Fix navigation buttons not clearing */
-.rst-footer-buttons {
-    clear: both;
+/* proper seal navigation buttons; jumping on resize */
+.rst-footer-buttons::before , .rst-footer-buttons::after{
+    width: 100%;
 }
