Manual: Table Caption
Move the table caption to bottom
Affects: every table (with caption)

Text wrap of figure captions in tables
Affects: every caption with limited space

Test page: https://www.blender.org/manual/rigging/posing/editing.html#id13

By @TobiasH

Differential Revision: https://developer.blender.org/D1914

--- a/theme/css/theme_overrides.css
+++ b/theme/css/theme_overrides.css
@@ -49,6 +49,9 @@ input[type="color"] {
     color:#404040;
 }
 
+/*moves the table captions to the bottom*/ 
+table { caption-side: bottom; }
+
 /* Fix giant captions */
 .caption-text {
     font-size: 13px;
@@ -58,8 +61,10 @@ input[type="color"] {
     color:#808080;
 }
 
+/*text wrap of figure captions in tables*/
 .caption {
     line-height: 0px;
+    white-space: normal;
 }
 
 /* proper seal navigation buttons; jumping on resize */
