--- a/theme/css/theme_overrides.css
+++ b/theme/css/theme_overrides.css
@@ -49,7 +49,7 @@ input[type="color"] {
     color:#404040;
 }
 
-/*moves the table captions to the bottom*/ 
+/* Moves the table captions to the bottom */ 
 table { caption-side: bottom; }
 
 /* Fix giant captions */
@@ -61,7 +61,8 @@ table { caption-side: bottom; }
     color:#808080;
 }
 
-/*text wrap of figure captions in tables*/
+/* Text wrap of figure captions in tables,
+ * (without this images with captions in tables can cause a log of horizontal scrolling). */
 .caption {
     line-height: 0px;
     white-space: normal;
