Proper div clear
By @TobiasH

Differential Revision: https://developer.blender.org/D1939

--- a/theme/css/theme_overrides.css
+++ b/theme/css/theme_overrides.css
@@ -72,3 +72,8 @@ table { caption-side: bottom; }
 .rst-footer-buttons::before , .rst-footer-buttons::after{
     width: 100%;
 }
+
+/*.. container:: lead , block text float around image*/
+.lead {
+	clear: both; width: 100%;
+}
