Manual: Menu selection field
D1956 by TobiasH

This makes it easier to tell menu's apart from regular text.

--- a/theme/css/theme_overrides.css
+++ b/theme/css/theme_overrides.css
@@ -77,3 +77,12 @@ table { caption-side: bottom; }
 .lead {
 	clear: both; width: 100%;
 }
+
+/* draws a box around :menuselection: field */
+.menuselection {
+    border: solid #E1E4E5 1px;
+    background-color: rgba(255, 255, 255, 0.65);
+    white-space: nowrap;
+    padding: 1px 6px;
+}
+
