Manual: line break
Remove the indent on line break block.

The "| text " seams to be the only way in RST to force a line break.
(besides some hacks inserting a <br> with a ..raw substitution)

The indent interrupts the text flow.

i.e used in .. refbox

Patch by @TobiasH

Differential Revision: https://developer.blender.org/D1967

--- a/theme/css/theme_overrides.css
+++ b/theme/css/theme_overrides.css
@@ -103,3 +103,5 @@ table { caption-side: bottom; }
     .menuselection {white-space: normal;}
 }
 
+/*remove indent on line break*/
+.rst-content .line-block {margin-left:0px}
