Manual: menuselection figure caption
:menuselection: figure caption
+ styling to differentiate it from normal text

+ clean up

Failed to commit  `manual/animation/driver.rst`

Patch by @TobiasH

Differential Revision: https://developer.blender.org/D1992

--- a/theme/css/theme_overrides.css
+++ b/theme/css/theme_overrides.css
@@ -102,6 +102,11 @@ table { caption-side: bottom; }
 @media screen and (max-width: 420px) { 
     .menuselection {white-space: normal;}
 }
+.caption .menuselection { 
+	background-color: none;
+	border: none;
+} 
+.caption .kbd, {background-color: none}
 
 /*remove indent on line break*/
 .rst-content .line-block {margin-left:0px}
