--- a/theme/css/theme_overrides.css
+++ b/theme/css/theme_overrides.css
@@ -103,3 +103,62 @@ table {caption-side: bottom}
 
 /*remove indent on line break*/
 .rst-content .line-block {margin-left:0px}
+
+/*applied on contents:sections*/
+/*$ section description*/ 
+@media screen and (min-width: 450px){
+.tocdescr {
+	display: flex; display: -webkit-flex;
+	flex-flow: row wrap; -webkit-flex-flow: row wrap;
+	justify-content: space-between; -webkit-justify-content: space-between;
+	align-items: flex-start; -webkit-align-items: flex-start;
+	align-content: flex-start; -webkit-align-content: flex-start;
+	list-style-type: none;
+	margin-bottom: 10px;
+}
+/*Dan Andreasson  on Stack Overflow*/
+.tocdescr:after {
+	content: "";
+	flex: 1 0 33.3%; -webkit-flex: 1 0 33.3%;
+	margin-left: 45px;
+	align-self: stretch; -webkit-align-self: stretch;
+}
+}
+@media screen and (max-width: 450px) {
+.tocdescr {
+	display: flex; display: -webkit-flex;
+	flex-flow: column wrap; -webkit-flex-flow: column wrap;
+	justify-content: space-between; -webkit-justify-content: space-between;
+	align-items: flex-start; -webkit-align-items: flex-start;
+	align-content: flex-start; -webkit-align-content: flex-start;
+	list-style-type: none;
+	margin-bottom: 10px;
+}
+.tocdescr:after {
+	content: "";
+	flex: none; -webkit-flex: none;
+}
+}
+.descr {
+	flex: 2 0 33.3%; -webkit-flex: 2 0 33.3%;
+	margin: 15px; padding: 0px;
+	transition: width 0.7s ease-out; -webkit-transition: width 0.7s ease-out; 
+}
+.descr div.figure{margin-bottom: 18px}
+.descr dl {margin-bottom: 10px}
+.descr dl dt > a {
+	display: block;
+	width: 100%;
+	margin-bottom: 10px;
+}
+.descr dl dt a em, .descr dl dt a span{
+	font-weight: normal;
+	font-style: normal;
+}
+.descr dl dd{
+	font-style: normal;
+	margin: 0px; padding: 0px;
+}
+.descr .figure img{box-shadow: 2px 2px 3px rgba(0,0,0,0.5)}
+.descr .figure img:hover{box-shadow: none}
+/*x section description*/
