--- a/resources/theme/css/theme_overrides.css
+++ b/resources/theme/css/theme_overrides.css
@@ -181,7 +181,7 @@ a.external {color:#656AE0;}
 
 .cit-ref div{margin-bottom: 0}
 .cit-ref{margin-bottom: 5px}
-.rst-content .citation .docutils td{padding-bottom: 2px; padding-top: 2px}
+.rst-content table.docutils.citation td{padding-bottom: 2px; padding-top: 2px}
 table.docutils.citation {margin-bottom:0px; transition: color .1s ease-in-out;}
 table.docutils.citation:last-child {margin-bottom:10px}
 table.docutils.citation:hover {color: #444}
