--- a/resources/theme/css/theme_overrides.css
+++ b/resources/theme/css/theme_overrides.css
@@ -94,6 +94,9 @@ iframe {
 /*copyright font scale down*/
 footer p{ font-size: smaller}
 
+/*intermediate headline*/
+.rubric {font-family: "Roboto Slab","ff-tisa-web-pro","Georgia",Arial,sans-serif}
+
 /*.. container:: lead , block text float around image*/
 .lead {
 	clear: both; width: 100%;
