--- a/resources/templates/opensearch.xml
+++ b/resources/templates/opensearch.xml
@@ -1,4 +1,4 @@
 {% extends "!opensearch.xml" %}
 {% block extra -%}
-<Image height="16" width="16" type="image/x-icon">https://www.blender.org/wp-content/themes/bthree/assets/images/favicon.ico?c5b6e6</Image>
+<Image height="16" width="16" type="image/x-icon">https://www.blender.org/wp-content/themes/bthree/assets/images/favicon.ico</Image>
 {%- endblock %}
